<resources>
    <string name="app_name">Login Flow</string>
    <string name="enter_the_otp">Enter The\nOTP</string>
    <string name="btn_continue">Continue</string>
    <string name="otp_hint">1234</string>

    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="matches_fragment">Matches fragment</string>
    <string name="profile_fragment">Profile fragment</string>

    <string name="picture">picture</string>
    <string name="personal_messages_to_you">Personal messages to you</string>
    <string name="tap_to_review_50_notes">Tap to review 50+ notes</string>
    <string name="interested_in_you">Interested In You</string>
    <string name="premium_description">Premium members can\nview all their likes at once</string>
    <string name="upgrade">Upgrade</string>
    <string name="liked_profile_1">liked profile 1</string>
    <string name="liked_profile_2">liked profile 2</string>

    <string name="get_otp">Get OTP</string>
    <string name="enter_your_phone_number">Enter Your\nPhone Number</string>
    <string name="sample_phone_num">9876543212</string>
    <string name="default_country_code">+91</string>

    <string name="notes">Notes</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>

    <string name="profile_name">%s, %d</string>
</resources>