<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.aisle.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PhoneNumberFragment">

        <TextView
            android:id="@+id/text_title"
            style="@style/TitleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/get_otp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title_bold"
            style="@style/TitleTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_your_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <EditText
            android:id="@+id/edit_country_code"
            style="@style/RoundedEditText"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="12dp"
            android:autofillHints="+91"
            android:hint="@string/default_country_code"
            android:inputType="number"
            android:maxLength="3"
            android:text="@={loginViewModel.countryCode}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title_bold"
            tools:text="+91" />

        <EditText
            android:id="@+id/edit_phone_num"
            style="@style/RoundedEditText"
            android:layout_width="147dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:autofillHints="123456789"
            android:hint="@string/sample_phone_num"
            android:inputType="phone"
            android:maxLength="10"
            android:text="@={loginViewModel.phoneNum}"
            app:layout_constraintBottom_toBottomOf="@id/edit_country_code"
            app:layout_constraintStart_toEndOf="@id/edit_country_code"
            app:layout_constraintTop_toTopOf="@id/edit_country_code"
            tools:text="@string/sample_phone_num" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_continue"
            style="@style/PrimaryButton"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:text="@string/btn_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_country_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>