<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            tools:context=".fragments.DiscoverFragment">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="53dp"
                android:fontFamily="@font/gilroy"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textFontWeight="800"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/gilroy"
                android:text="@string/personal_messages_to_you"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_title" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="1dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/text_subtitle"
                card_view:cardElevation="0dp">

                <com.aisle.widgets.SquareImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/picture"
                    android:scaleType="centerCrop" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:src="@drawable/gradient_image_bottom" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/text_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                android:fontFamily="@font/gilroy"
                android:textColor="@color/white"
                android:textFontWeight="800"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/text_profile_description"
                app:layout_constraintStart_toStartOf="@id/card_profile"
                tools:text="Meena, 23" />

            <TextView
                android:id="@+id/text_profile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginBottom="16dp"
                android:elevation="2dp"
                android:fontFamily="@font/gilroy"
                android:text="@string/tap_to_review_50_notes"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/card_profile"
                app:layout_constraintStart_toStartOf="@id/card_profile" />

            <TextView
                android:id="@+id/text_interested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/gilroy"
                android:text="@string/interested_in_you"
                android:textColor="@color/black"
                android:textFontWeight="800"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/card_profile" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group_premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="text_premium_description,button_upgrade"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_premium_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gilroy"
                android:text="@string/premium_description"
                android:textColor="@color/gray"
                android:textFontWeight="600"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/text_interested" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_upgrade"
                style="@style/PrimaryButton"
                android:text="@string/upgrade"
                app:layout_constraintBottom_toBottomOf="@id/text_premium_description"
                app:layout_constraintEnd_toEndOf="@id/guideline_right" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_bottom_left"
                android:layout_width="0dp"
                android:layout_height="255dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="4dp"
                android:elevation="1dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toStartOf="@id/card_bottom_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/button_upgrade"
                app:layout_goneMarginTop="13dp"
                card_view:cardElevation="0dp">

                <ImageView
                    android:id="@+id/image_bottom_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/liked_profile_1"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_bottom_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                android:fontFamily="@font/gilroy"
                android:textColor="@color/white"
                android:textFontWeight="800"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/card_bottom_left"
                app:layout_constraintStart_toStartOf="@id/card_bottom_left"
                tools:text="Teena" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_bottom_right"
                android:layout_width="0dp"
                android:layout_height="255dp"
                android:layout_marginStart="4dp"
                android:elevation="1dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@id/card_bottom_left"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toEndOf="@id/card_bottom_left"
                app:layout_constraintTop_toTopOf="@id/card_bottom_left"
                card_view:cardElevation="0dp">

                <ImageView
                    android:id="@+id/image_bottom_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/liked_profile_2"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_bottom_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginBottom="10dp"
                android:elevation="2dp"
                android:fontFamily="@font/gilroy"
                android:textColor="@color/white"
                android:textFontWeight="800"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/card_bottom_right"
                app:layout_constraintStart_toStartOf="@id/card_bottom_right"
                tools:text="Beena" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>