<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.aisle.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.PhoneNumberFragment">

        <TextView
            android:id="@+id/text_phone_num"
            style="@style/TitleTextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:text="@{loginViewModel.countryCode + ` ` + loginViewModel.phoneNum}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="+91 123456789" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_edit_phone"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_pencil"
            app:layout_constraintBottom_toBottomOf="@id/text_phone_num"
            app:layout_constraintStart_toEndOf="@id/text_phone_num"
            app:layout_constraintTop_toTopOf="@id/text_phone_num" />

        <TextView
            android:id="@+id/text_phone_num_bold"
            style="@style/TitleTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_the_otp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_phone_num" />

        <EditText
            android:id="@+id/edit_otp"
            style="@style/RoundedEditText"
            android:layout_width="78dp"
            android:layout_height="36dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="12dp"
            android:autofillHints="1234"
            android:hint="@string/otp_hint"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_phone_num_bold"
            tools:text="9999" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_continue"
            style="@style/PrimaryButton"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:text="@string/btn_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_otp" />

        <TextView
            android:id="@+id/text_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/inter"
            android:text="@{loginViewModel.otpTimeout}"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/button_continue"
            app:layout_constraintStart_toEndOf="@id/button_continue"
            app:layout_constraintTop_toTopOf="@id/button_continue"
            tools:text="00:59" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>